changement couleur fond

--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -1,20 +1,20 @@
 .site{
-background-color:#B28300;
+background-color:#065421;
 }
 .site-content{
-background-color:#19C9FF;
+background-color:#B21D0F;
 
 }
 .wp-block-image img{
-border : 3px solid black;
+border : 3px solid #B21D0F;
 }
 
 .wp-block-media-text__media img{
-border : 3px solid black;
+border : 3px solid #B21D0F;
 }
 
 .wp-block-media-text__content{
-background-color:blanchedalmond;
+background-color:#B21D0F;
 margin-left:50px;
 }
 
