--- a/sass/animation/_anim-header.scss
+++ b/sass/animation/_anim-header.scss
@@ -9,20 +9,19 @@
  
     100% {
         transform: translateY(0) rotateX(0deg); 
-        // animation-timing-function: cubic-bezier(.89, .17, 1, .31);
+        animation-timing-function: cubic-bezier(.89, .17, 1, .31);
     }
 }
 
 @keyframes anim2 {
 
    0% {
-        transform: scale(0%); 
-        animation-timing-function: cubic-bezier(1, .01, .91, 1.7);
-    }
-    
+        transform:translateX(-100vh); 
+        
+   }
 
     100% {
-        transform: scale(200%);
+        transform: translateX(0);
     }
 } 
 
@@ -31,21 +30,26 @@
 @keyframes anim3 {
     0% {
         animation-timing-function: cubic-bezier(1, .01, .91, 1.7);
-        transform: translateX(-100%) rotateX(50deg);
+        transform: translateX(-100%) rotateX(60deg);
     }
 
     100% {
-        transform: translateX(0) rotateX(50deg);
+        transform: translateX(0) rotateX(60deg);
     }
 }
 
-.site-header.featured-image {
-    perspective: 500px;
-}
 
 .anim1 {
     transform-origin: top center;
-    animation: anim1 2s, anim2 1s 2s  ;
+    animation: anim1 2s;
+
+    animation-fill-mode: forwards;
+    
+}
+
+.anim2 {
+    transform-origin: top center;
+    animation: anim2 2s ;
 
     animation-fill-mode: forwards;
     
@@ -54,9 +58,12 @@
 
 
 
+
+
+
 .anim3 {
-    // animation-fill-mode: forwards;
+    // animation-fill-mode: forwards;//
     transform-origin: top center;
-    animation: anim3 1s forwards, anim2 1s 1s forwards;
+    animation: anim3 1s forwards;
     animation-timing-function: cubic-bezier(1, .01, .91, 1.7);
 }
