fond rouge police noire

--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -1,10 +1,10 @@
 
 p {
-color: white;
+color: black;
 
  }
 .site{
-background-color:#065421;
+background-color:#B21D0F;
 }
 .site-content{
 background-color:#B21D0F;
