--- a/style.css
+++ b/style.css
@@ -791,11 +791,11 @@ body.page .main-navigation {
 }
 
 p {
-  color: white;
+  color: black;
 }
 
 .site {
-  background-color: #065421;
+  background-color: #B21D0F;
 }
 
 .site-content {
