--- a/sass/site/cours/_liste-cours.scss
+++ b/sass/site/cours/_liste-cours.scss
@@ -8,7 +8,7 @@ color: #fff;
 
 }
 .liste-cours {
-    color:#fff;
+    /*color:#fff;*/
     display : grid;
     grid-template-columns: 1fr;
     grid-gap: 10px;
