--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -7,15 +7,19 @@ color:white;
 background-color:#B21D0F;
 }
 .site-content{
+display:flex;
+justify-content:center;
 background-color:#B21D0F;
 
 }
 .wp-block-image img{
 border : 3px solid #1469CC;
+width:500vh;
 }
 
 .wp-block-media-text__media img{
 border : 3px solid #1469CC;
+width:200vh;
 }
 
 .wp-block-media-text__content{
@@ -23,12 +27,13 @@ background-color:#1469CC;
 margin-left:50px;
 }
 
-.entry-content p{
-background-color: #065421;
+.content-entry p{
+background-color:#1469CC;
+
 
 }
 
 .widget-area{
 color:white;
-
+    
 }
