--- a/sass/site/header/_site-featured-image.scss
+++ b/sass/site/header/_site-featured-image.scss
@@ -45,7 +45,7 @@
         z-index: 9;
         width: 100%;
         display: flex;
-        justify-content: center;
+        /*justify-content: center;*/
         
     }
 
