--- a/sass/site/header/_site-featured-image.scss
+++ b/sass/site/header/_site-featured-image.scss
@@ -21,7 +21,11 @@
        align-self: center;
     }
 
- .site-branding .site-description
+.entry-title{
+    font-size: 2vw;
+
+}
+.site-branding .site-description
  {
        font-size: 5vw;
        transform : translateX(-100%);
@@ -45,7 +49,7 @@
         z-index: 9;
         width: 100%;
         display: flex;
-        /*justify-content: center;*/
+        justify-content: center;
         
     }
 
@@ -79,12 +83,12 @@
 
 
            .site-branding .site-title {
-               font-size: 4vw;
+               font-size: 3vw;
                
            }
 
            .site-branding .site-description {
-               font-size: 3vw; 
+               font-size: 2vw; 
            }
 
    }
