nouvelle police de caractere

--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -1,9 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css?family=Righteous');
 p {
 color:white;
 }
 
 .site{
+font-family: 'Righteous', cursive;
 background-color:#B21D0F;
 }
 .site-content{
