--- a/sass/animation/_anim-header.scss
+++ b/sass/animation/_anim-header.scss
@@ -81,3 +81,18 @@
     animation-fill-mode: forwards;
     
 }
+
+
+@for $i from 1 to 3 {
+    .wp-block-media-text__content:nth-child(#{$i}) { animation-delay: $i * 0.25s; }
+  }
+
+  .wp-block-media-text__content:nth-child(1) {
+    background-color: aqua;
+  }
+  .wp-block-media-text__content:nth-child(2) {
+    background-color: chocolate;
+  }
+  .wp-block-media-text__content:nth-child(3) {
+    background-color: deeppink;
+  }
