--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -5,12 +5,12 @@ color:white;
 
 .site{
 font-family: 'Righteous', cursive;
-background-color:#B21D0F;
+background-color:#E86F0C;
 }
 .site-content{
 display:flex;
 justify-content:center;
-background-color:#B21D0F;
+background-color:#FFCF0D;
 
 }
 .wp-block-image img{
@@ -27,6 +27,7 @@ width:200vh;
 /*display: none;*/
 background-color:#1469CC;
 margin-left:50px;
+
 }
 
 
