--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -14,12 +14,12 @@ background-color:#FFCF0D;
 
 }
 .wp-block-image img{
-border : 3px solid #1469CC;
+border : 3px solid #A70CE8;
 width:50vh;
 }
 
 .wp-block-media-text__media img{
-border : 3px solid #1469CC;
+border : 3px solid #A70CE8;
 width:200vh;
 }
 
