--- a/style.css
+++ b/style.css
@@ -817,12 +817,12 @@ p {
 }
 
 .wp-block-image img {
-  border: 3px solid #1469CC;
+  border: 3px solid #A70CE8;
   width: 50vh;
 }
 
 .wp-block-media-text__media img {
-  border: 3px solid #1469CC;
+  border: 3px solid #A70CE8;
   width: 200vh;
 }
 
